--- a/FrontEnd/src/components/Liquidador/adminuss.html
+++ b/FrontEnd/src/components/Liquidador/adminuss.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <center><h1 id="title1">Liquidador: Ernesto Jorquera</h1></center>
-        <div id="cont">
+        <center><div id="cont">
             <label for="selectus">Siniestro:</label>
             <select id="selectus"> 
                 <option disabled selected>Seleccione el Siniestro</option>
@@ -21,14 +21,11 @@
             <button id="accsselect">
                 Seleccionar Siniestro
             </button>
-        </div>
-        <div id="sinadm">
+        </div></center>
+        <center><div id="sinadm">
             <div>
                 <h2>Gestión de Siniestro
-                    <img src="unab.png" id="unab">
                 </h2>
-                <br>
-                <br>
             </div>
             
             <form>
@@ -54,7 +51,7 @@
                     <option value="Moderada">Moderada</option>
                     <option value="Completa">Completa</option>
                     </select>
-                    <label for="time">Grúa:</label>
+                    <label for="time">Tiempo Estimado:</label>
                     <input id = "time" type="text" name="time">
                 <br>
                 <br>
@@ -76,11 +73,11 @@
                     </button>
                 </center>
             </form>
-        </div>
+        </div></center>
         <footer>
             <img src="unab.png" id="unab">
             <img src="Logo Siniestro.png" id="logo">
-            <h3>Administración de Siniestro v0.5</h3>
+            <center><h3>Administración de Siniestro v0.5</h3></center>
         </footer>
         <script src="scriptsadminuss.js"></script>
     </body>
