--- a/FrontEnd/src/components/Liquidador/style.css
+++ b/FrontEnd/src/components/Liquidador/style.css
@@ -1,349 +1,132 @@
-html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-    margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-    display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
-    overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-    background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-    border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-    font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-    font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-sub {
-    bottom: -0.25em;
-}
-
-sup {
-    top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-    max-width: 100px;
-    max-height: 100px;
-    border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-    overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-    text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
-}
-
-fieldset {
-    padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-    box-sizing: border-box; /* 1 */
-    color: inherit; /* 2 */
-    display: table; /* 1 */
-    max-width: 100%; /* 1 */
-    padding: 0; /* 3 */
-    white-space: normal; /* 1 */
-}
-
-progress {
-    vertical-align: baseline;
-}
-
-textarea {
-    overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
-
-[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
-}
-
-[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
-}
-
-details {
-    display: block;
-}
-
-summary {
-    display: list-item;
-}
-
-template {
-    display: none;
-}
-
-[hidden] {
-    display: none;
-}
-
 :root {
     --verde: #497962;
-    --lima: #9CA766;
-    --azul: #4F5378;
+    --lima: #c7cca9;
+    --azul: #8f91aa;
     --primario: #fff;
     --secundario: #fff;
     --blanco: #fff;
     --oscuro: #fff;
 }
-.utility {
-    background-color: var(--secundario);
+body{
+    background: var(--azul);
+    font-family: 'Times New Roman', Times, serif;
+    width: 80%;
+    height: 10%;
+    margin: 5% auto;
+    border: 2px solid black;
 }
-
-.Nav-Principal {
+#mainblock{
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+#title1
+{
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+#secondblock{
+    border-bottom: 2px solid black;
+}
+#desc{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    border-bottom: 2px solid black;
+}
+#final{
+    border-bottom: 2px solid black;
+}
+.menu 
+{
+    background-color: var(--azul);
+    text-align: center;
+    align-items: center;
+    padding: 4%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    
 }
 
-
-.Nav-Principal a {
-    display: block;
-    text-align: center ;
-    color: var(--blanco);
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: bolder;
-    padding: 1rem;
-}
-
-.Nav-Principal a:hover {
-    background-color: var(--primario);
-    color: var(--oscuro);
-}
-
-.Cool-Button {
-    background-color: var(--secundario);
-    color: var(--blanco);
-    padding: 1rem 3rem;
-    margin-top: 1rem;
-    font-size: 2rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bolder;
-    border-radius: .5rem;
-    width: 90%;
+.menu a 
+{
+    color: #333;
     text-align: center;
-    border: none;
+    padding: 1% 1%;
+    font-size: 150%; 
+    text-decoration: none;
+    margin: 5% auto;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
-.Formulario {
-    width: fit-content;
-    margin: auto;
-    border-radius: 25px;
-    background-color: var(--blanco);
-    text-align: center;
-    padding: 2%;
-    transform: translate(0, 50%);
+.menu a:hover 
+{
+    background-color:lima;
+    color: black
 }
 
-.Inputcito {
-    outline: none;
-    border: none;
-    margin-bottom: 1px;
-    background-color: transparent;
-    border-bottom: 1px solid #333;
+.inactivo 
+{
+    background-color: var(--lima);
+    color: black;
 }
-
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: var(--blanco);
+img 
+{
+    max-width: 100px;
+    max-width: 100px;
+}
+#cont
+{
+    padding-left: 2px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+h1
+{
+    font-family: 'Courier New', Courier, monospace;
+    background: var(--lima);
+}
+button
+{
+    background-color: var(--lima);
+    font-family: 'Times New Roman', Times, serif;
+}
+#usadm
+{
+    padding-top: 1%;
+    padding-left: 2%;
+    padding-bottom: 2%;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+#submit
+{
+    padding: 1%;
+}
+#unab
+{
+    float: left;
+    max-width: 10%;
+    max-height: 10%;
+    margin-top: 2%;
+    margin-right: 1%;
+    margin-left: 1%;
+}
+#logo
+{
+    float: right;
+    max-width: 10%;
+    max-height: 10%;
+    margin-right: 1%;
+    margin-left: 1%;
+}
+footer
+{
+    margin-bottom: 10%;
+}
+h3
+{
+    margin-top: 1%;
+    font-size: 30px;
 }
