Consultar Siniestro - pendiente FrontBack

--- a/FrontEnd/src/components/Autenticacion/Aute.css
+++ b/FrontEnd/src/components/Autenticacion/Aute.css
@@ -85,7 +85,7 @@
 
 
 /* Estilo del pie de página */
-footer {
+.foooter {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.5); 
     color: white; 
