--- a/FrontEnd/src/components/Autenticacion/Aute.css
+++ b/FrontEnd/src/components/Autenticacion/Aute.css
@@ -3,13 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100vh; /* Asegúrate de que esto ocupa toda la altura de la ventana gráfica */
     margin: 0;
+    padding: 0; /* Agregado para asegurar que no haya espaciado extra */
     background-color: #f4f4f4; 
     background-image: url('https://www.solofondos.com/wp-content/uploads/2015/11/fondos-de-pantalla-para-paginas-web-colores-claros.jpg'); 
-    background-size: cover; 
+    background-size: cover; /* Esto debería cubrir toda la pantalla sin repetirse */
     background-position: center; 
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat; /* Asegurarse de que la imagen no se repita */
     font-family: 'Arial', sans-serif; 
 }
 .Encabezado {
@@ -25,23 +26,37 @@
     border-radius: 10px; 
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); 
     width: 550px;
-    max-width: 90%;
-    margin: 20px auto; 
+    max-width: 90%; /* Esto limitará el formulario en pantallas muy grandes */
+    margin: 20px; /* Elimina auto para evitar centrado horizontal automático */
     border: 1px solid #ddd; 
-
-
-    opacity: 0;
     animation: fadeIn 0.5s ease forwards;
-    animation-delay: 0.3s;
+    animation-delay: 0.3s; /* Verifica que la animación exista y esté ejecutándose correctamente */
 }
 
+@media (max-width: 768px) {
+    .formularioAute {
+        width: 90%; /* Adjust width for smaller screens */
+    }
+}
 /* Animación suave de aparición */
 @keyframes fadeIn {
     to {
         opacity: 1;
     }
 }
+.campoPassword {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
 
+/* Estilo para el botón de mostrar/ocultar contraseña */
+.togglePassword {
+    background: transparent;
+    border: none;
+    margin-left: -40px; /* Ajusta esto según sea necesario para alinear correctamente */
+    cursor: pointer;
+}
 /* Estilo de los campos de texto y contraseña */
 .casillas {
     width: 100%;
@@ -55,6 +70,7 @@
     transition: border-color 0.3s, box-shadow 0.3s; 
 
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    
 }
 
 .casillas:focus {
