--- a/FrontEnd/src/components/Liquidador/probando.css
+++ b/FrontEnd/src/components/Liquidador/probando.css
@@ -1,3 +1,4 @@
+/*
 :root {
     --verde: #497962;
     --lima: #c7cca9;
@@ -7,7 +8,7 @@
     --blanco: #fff;
     --oscuro: #fff;
 }
-body{
+.BodyLiqu{
     background: var(--azul);
     font-family: 'Times New Roman', Times, serif;
     width: 80%;
@@ -130,3 +131,4 @@ h3
     margin-top: 1%;
     font-size: 30px;
 }
+*/
