--- a/FrontEnd/src/components/VistaAdmin/VAdmin.css
+++ b/FrontEnd/src/components/VistaAdmin/VAdmin.css
@@ -1,35 +1,2 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/* Estilo para el contenedor general de la barra de navegación */
 
-nav {
-    background-color: #333;
-    overflow: hidden;
-    width: 100%; 
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111;
-}
