--- a/FrontEnd/src/components/ConsultaAsistenciaGrua/consultaAsistenciaGrua.css
+++ b/FrontEnd/src/components/ConsultaAsistenciaGrua/consultaAsistenciaGrua.css
@@ -1,21 +1,10 @@
-:root {
-    --verde: #497962;
-    --lima: #9CA766;
-    --azul: #4F5378;
-    --primario: #fff;
-    --secundario: #000;
-    --blanco: #fff;
-    --oscuro: #fff;
-}
-
 .contenedor {
     max-width: 120rem;
     margin: 0 auto;
-
 }
 
 .utility {
-    background-color: var(--secundario);
+    background-color: #000; /* --secundario */
 }
 
 .Nav-Principal {
@@ -24,11 +13,10 @@
     justify-content: space-between;
 }
 
-
 .Nav-Principal a {
     display: block;
-    text-align: center ;
-    color: var(--blanco);
+    text-align: center;
+    color: #fff; /* --blanco */
     text-decoration: none;
     font-size: 2rem;
     font-weight: bolder;
@@ -36,13 +24,13 @@
 }
 
 .Nav-Principal a:hover {
-    background-color: var(--primario);
-    color: var(--oscuro);
+    background-color: #fff; /* --primario */
+    color: #fff; /* --oscuro */
 }
 
 .Cool-Button {
-    background-color: var(--verde);
-    color: var(--blanco);
+    background-color: #497962; /* --verde */
+    color: #fff; /* --blanco */
     padding: 1rem 3rem;
     margin-top: 1rem;
     font-size: 20px;
@@ -58,7 +46,7 @@
     width: fit-content;
     margin: auto;
     border-radius: 25px;
-    background-color: var(--blanco);
+    background-color: #fff; /* --blanco */
     text-align: center;
     padding: 2%;
     transform: translate(0, 50%);
@@ -77,7 +65,7 @@
     bottom: 0;
     width: 100%;
     height: 50px;
-    background-color: var(--blanco);
+    background-color: #fff; /* --blanco */
 }
 
 .Visualizacion-Datos-Grua {
@@ -88,7 +76,7 @@
     align-items: center;
     justify-content: center;
     border-spacing: 10px;
-    background-color: var(--azul);
+    background-color: #4F5378; /* --azul */
     border: 1px solid #333333;
 }
 
@@ -96,8 +84,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--lima);
-
+    background-color: #9CA766; /* --lima */
 }
 
 .Datos-Consulta-Asistencia {
@@ -111,4 +98,4 @@
 
 #Estadisticas-Globales {
     display: none;
-} 
+}
