--- a/FrontEnd/src/components/VistaAdmin/diseñoTablaAdmin.css
+++ b/FrontEnd/src/components/VistaAdmin/diseñoTablaAdmin.css
@@ -72,3 +72,84 @@
 .menu-acciones button:hover {
   background-color: #218838;
 }
+/* Estilos generales del Modal */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  width: 80%;
+  max-width: 500px;
+}
+
+/* Título del Modal */
+.TituloModal {
+  color: #333;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Contenedor de campos del formulario */
+.DivModal {
+  margin-bottom: 15px;
+}
+
+/* Estilo de los campos del formulario */
+.campoField {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Botones del formulario */
+.BtnnModal {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 10px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.BtnnModal[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.BtnnModal[type="button"] {
+  background-color: #f44336;
+  color: white;
+}
+
+/* Mensaje de error de validación */
+.form-error {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 5px;
+}
+.radio-group {
+  display: flex;
+  align-items: center; /* Alinea verticalmente los elementos */
+  margin-bottom: 5px; /* Añade un espacio entre las filas */
+}
+
+/* Estilo para la etiqueta del radio button */
+.radio-label {
+  margin-left: 10px; /* Añade espacio entre el botón de radio y la etiqueta */
+  font-size: 1rem; /* Tamaño de fuente para la etiqueta */
+}
+
+/* Estilo para el radio button */
+.radio-button {
+  margin: 0; /* Elimina márgenes por defecto */
+  cursor: pointer; /* Cambia el cursor a puntero para indicar que es seleccionable */
+}
