--- a/FrontEnd/src/components/IngresoSiniestro/style.css
+++ b/FrontEnd/src/components/IngresoSiniestro/style.css
@@ -1,12 +1,3 @@
-:root {
-  --verde: #497962;
-  --lima: #9CA766;
-  --azul: #4F5378;
-  --primario: #fff;
-  --secundario: #fff;
-  --blanco: #fff;
-  --oscuro: #fff;
-}
 .utility {
   background-color: #fff;
 }
@@ -17,11 +8,10 @@
   justify-content: space-between;
 }
 
-
 .Nav-Principal a {
   display: block;
-  text-align: center ;
-  color: var(--blanco);
+  text-align: center;
+  color: #fff; /* Cambiado de --blanco */
   text-decoration: none;
   font-size: 2rem;
   font-weight: bolder;
@@ -29,13 +19,13 @@
 }
 
 .Nav-Principal a:hover {
-  background-color: var(--primario);
-  color: var(--oscuro);
+  background-color: #fff; /* Cambiado de --primario */
+  color: #fff; /* Cambiado de --oscuro */
 }
 
 .Cool-Button {
-  background-color: var(--secundario);
-  color: var(--blanco);
+  background-color: #fff; /* Cambiado de --secundario */
+  color: #fff; /* Cambiado de --blanco */
   padding: 1rem 3rem;
   margin-top: 1rem;
   font-size: 2rem;
@@ -52,7 +42,7 @@
   width: fit-content;
   margin: auto;
   border-radius: 25px;
-  background-color: var(--blanco);
+  background-color: #fff; /* Cambiado de --blanco */
   text-align: center;
   padding: 2%;
   transform: translate(0, 50%);
@@ -67,8 +57,7 @@
 }
 
 .footerIngresoSini {
-  background-color:#4F5378;
-
+  background-color: #4F5378; /* Usado directamente el color azul oscuro */
   bottom: 0;
   width: 100%;
   height: 50px;
