--- a/FrontEnd/src/components/Inicio/Slider.css
+++ b/FrontEnd/src/components/Inicio/Slider.css
@@ -1,6 +1,6 @@
 .slider-container {
     position: relative;
-    width: 100%;
+    width: 110vw;
     max-width: 720px;
     margin: auto;
     overflow: hidden;
@@ -15,9 +15,10 @@
     display: block;
 }
 
-img {
+.imagenSlider {
     width: 100%;
-    height: auto;
+    height: 100%; 
+    object-fit: cover; 
 }
 
 .slide-button {
