--- a/FrontEnd/src/components/IngresoSiniestro/style.css
+++ b/FrontEnd/src/components/IngresoSiniestro/style.css
@@ -5,14 +5,12 @@
   padding: 0;
 }
 
-header {
-  background-color: rgba(29, 99, 116, 0.82);
-  color: white;
-  padding: 10px;
-}
 
 .menu {
   margin-top: 10px;
+  background-color: rgba(29, 99, 116, 0.82);
+  color: white;
+  padding: 10px;
 }
 
 .menu a {
@@ -25,9 +23,9 @@ header {
   text-decoration: underline;
 }
 
-h1 {
+.titulo {
   margin: 0;
-  margin-top: 20px; /* Added margin to separate from .menu */
+  margin-top: 20px;
 }
 
 .form-group {
@@ -38,19 +36,19 @@ h1 {
   border-radius: 5px;
 }
 
-label {
+.superLabel {
   display: block;
   margin-bottom: 8px;
 }
 
-input {
+.superInput {
   width: 100%;
   padding: 8px;
   margin-bottom: 16px;
   box-sizing: border-box;
 }
 
-button {
+.superButton {
   background-color: #4caf50;
   color: white;
   padding: 10px 15px;
@@ -59,7 +57,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.superButton:hover {
   background-color: #45a049;
 }
 
